# HalluciGuard

./: .gitignore  CONTRIBUTING.md  GEMINI.md  README.md  basic_usage.py  idea.md  pyproject.toml  setup.py  test_halluciGuard.py
.github/workflows/: ci.yml  release.yml
benchmarks/: leaderboard.html  leaderboard.json  leaderboard.md
docs/: TROUBLESHOOTING.md
examples/: basic_usage.py  langchain_example.py
extension/: content.js  manifest.json
halluciGuard/: __init__.py  __main__.py  claim_extractor.py  cli_module.py  config.py  errors.py  guard.py  models.py  report_builder.py  scorer.py  server.py  streaming.py
halluciGuard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
halluciGuard/cache/: base.py  local.py
halluciGuard/cli/: __init__.py  benchmark.py  chat.py  check.py  config.py  serve.py  status.py
halluciGuard/detectors/: __init__.py  extractor.py  scorer.py
halluciGuard/integrations/: __init__.py  langchain.py  openclaw.py
halluciGuard/leaderboard/: __init__.py  benchmark.py  dataset.py  exporter.py
halluciGuard/reporters/: __init__.py  badge.py  builder.py
halluciGuard/search/: __init__.py  base.py  tavily.py
plans/: cli-integration-plan.md  viral-growth-strategy.md
scripts/: benchmark_models.py  run_benchmark.py
tests/: openclaw_real_demo.py  test_halluciGuard.py  test_openclaw.py  test_rag.py  test_search.py  verify_sdk_connections.py
